--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
       
           <div class="asocial">
          <p class=altsocial>Social Media</p>  
-                <div class="social-icon-wrapper">
-                  <a href="https://www.instagram.com/" class="socialmedia">
+                <div class="asocial-icon-wrapper">
+                  <a href="https://www.instagram.com/" class="asocialmedia">
                     <svg class="icon-icon-instagram">
                       <use
                         xlink:href="./images/icons.svg/symbol-defs.svg#icon-instagram"
@@ -369,8 +369,8 @@
                     </svg>
                   </a>
                 </div>
-                <div class="social-icon-wrapper">
-                  <a href="https://www.twitter.com/" class="socialmedia">
+                <div class="asocial-icon-wrapper">
+                  <a href="https://www.twitter.com/" class="asocialmedia">
                     <svg class="icon-icon-twitter">
                       <use
                         xlink:href="./images/icons.svg/symbol-defs.svg#icon-twitter"
@@ -378,8 +378,8 @@
                     </svg>
                   </a>
                 </div>
-                <div class="social-icon-wrapper">
-                  <a href="https://www.facebook.com/" class="socialmedia">
+                <div class="asocial-icon-wrapper">
+                  <a href="https://www.facebook.com/" class="asocialmedia">
                     <svg class="icon-icon-facebook">
                       <use
                         xlink:href="./images/icons.svg/symbol-defs.svg#icon-facebook"
@@ -387,8 +387,8 @@
                     </svg>
                   </a>
                 </div>
-                <div class="social-icon-wrapper">
-                  <a href="https://www.linkedin.com/" class="socialmedia">
+                <div class="asocial-icon-wrapper">
+                  <a href="https://www.linkedin.com/" class="asocialmedia">
                     <svg class="icon-icon-linkedin">
                       <use
                         xlink:href="./images/icons.svg/symbol-defs.svg#icon-linkedin"
